--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cat Pics</title>
+    <title>Random Cat Pics</title>
   </head>
   <body class="bg-gradient-to-r from-gray-300 to-blue-800">
     <div id="app"></div>
